# MultilingualRepoOutline

./: .env.sample  .gitignore  LICENSE.md  Makefile  README.md  conftest.py  pyproject.toml
src/R/: 000_constants.R  001_rmd_setup.R  010_typical_r_file.R  011_typical_rmd_file.Rmd  011_typical_rmd_file.md
src/SPSS/: README.md
src/notebooks/: 010_typical_notebook_file.ipynb
src/pyutils/: cli.py  schema.py  types.py  utils.py
tests/: test_schema.py  test_utils.py
tests/fixtures/: example_data.csv
